<resources>
    <string name="app_name">iAdvice</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username_text">Email</string>
    <string name="logo_description">Main logo of the app</string>
    <string name="password_hint">Password</string>
    <string name="add_image_button">Select image</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">Description</string>
    <string name="nav_header_title">Title</string>
    <string name="nav_header_subtitle">Subtitle</string>
    <string name="settingsFragment">Settings</string>
    <string name="logOutFragment">Logout</string>
    <string name="faqFragment">FAQ</string>

    <!-- Preference Titles -->
    <string name="account_header">Account</string>
    <string name="settings_header">Settings</string>

    <!-- Messages Preferences -->
    <string name="name_title">Name</string>
    <string name="nickname_title">Nickname</string>
    <string name="notifications_title">Notifications</string>
    <string name="chat_settings_title">Chat Settings</string>
    <string name="language_title">Language</string>
    <string name="logout_title">Logout</string>
    <string name="bio_title">Bio</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="feedback_header">Feedback</string>
    <string name="feedback_title">Send feedback</string>
    <string name="question_argument_edit">Title</string>
    <string name="next_button">Next</string>
    <string name="category">Category</string>
    <string name="email">Email</string>
    <string name="categories">Categories</string>
    <string name="chat_cover">Click to select the cover</string>
    <string name="reference_categories_and_sex">Choose the category, gender and country</string>
    <string name="maximum_participants">Number of maximum participants</string>
    <string name="chat_last">Pick an expiration date</string>
    <string name="select_images">Select images</string>
    <string name="todo">TODO</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter message</string>
    <string name="archive">Archive</string>
    <string name="Refresh">Refresh</string>
    <string name="ranking">Ranking</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="edit_button">EDIT PROFILE</string>
    <string name="apply_changes">APPLY CHANGES</string>
    <string name="question_textview">Question</string>
    <string name="max_chat_users">Max users:</string>
    <string name="target_country">Target country:</string>
    <string name="target_gender">Target gender:</string>
    <string name="category_newchat_text">Category:</string>

</resources>

