<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account_header">

        <EditTextPreference
            app:key="name"
            app:title="@string/name_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/nickname_title"
            app:title="@string/nickname_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_header">

        <Preference
            app:icon="@drawable/ic_notifications"
            app:key="notifications"
            app:title="@string/notifications_title" />

   <!--     <SwitchPreferenceCompat
            app:key="notifications"
            app:title="Enable message notifications" />-->

        <Preference
            app:icon="@drawable/ic_chat"
            app:key="chat_settings"
            app:title="@string/chat_settings_title" />

        <Preference
            app:icon="@drawable/ic_language"
            app:key="language"
            app:title="@string/language_title" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/feedback_header">

        <Preference
            app:key="feedback"
            app:summary="Report technical issues or suggest new features"
            app:title="@string/feedback_title"/>

    </PreferenceCategory>


</PreferenceScreen>





