<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="none"
        android:enabled="true"
        android:menuCategory="container"
        android:visible="true">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settingsFragment"
            android:visible="true"
            app:showAsAction="never" />

        <item
            android:id="@+id/logOutFragment"
            android:icon="@drawable/ic_logout"
            android:title="@string/logOutFragment"
            android:visible="true"
            app:showAsAction="never" />

        <item
            android:id="@+id/archiveFragment"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/archive"
            android:visible="true"
            app:showAsAction="collapseActionView" />

    </group>

</menu>